# chip8-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpu.c  cpu.h  log.h  main.c
